# ai-ats-resume-analyzer

./: .env  ARCHITECTURE.md  LICENSE  README.md  analyse_pdf.py  app.py  judge_pitch.md  main.py  pyproject.toml  requirements.txt
templates/: index.html
